footer align issues

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -115,7 +115,7 @@
 }
 
 .footer-col-wrapper {
-    font-size: 10px;
+    font-size: 12px;
     color: $grey-color;
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
@@ -128,8 +128,8 @@
 }
 
 .footer-col-1 {
-    width: -webkit-calc(33% - (#{$spacing-unit} / 2));
-    width:         calc(33% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+    width:         calc(50% - (#{$spacing-unit} / 2));
 }
 
 .footer-col-2 {
@@ -138,8 +138,8 @@
 }
 
 .footer-col-3 {
-    width: -webkit-calc(34% - (#{$spacing-unit} / 2));
-    width:         calc(34% - (#{$spacing-unit} / 2));
+    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+    width:         calc(50% - (#{$spacing-unit} / 2));
 }
 
 @include media-query($on-laptop) {
